--- a/blog.html
+++ b/blog.html
@@ -17,25 +17,10 @@
 </header>
 
 <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-
-
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -85,8 +70,7 @@
                 <div class="row">
                     <div class="col col-12 col-md-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -95,9 +79,7 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -106,8 +88,7 @@
                 <div class="row">
                     <div class="col col-12 col-md-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -116,9 +97,7 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                 </div>
                 <hr />
