--- a/whishlist.html
+++ b/whishlist.html
@@ -21,8 +21,7 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -66,8 +65,41 @@
                     </p>
                 </blockquote>
             </div>
+            <hr />
 
-            <p class="h5 text-center text-primary">You have no items in your wishlist.</p>
+            <!-- Card -->
+
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col col-12 col-sm-4 col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+                                <div>
+                                    <h4 class="card-title">Nombre: Doki</h4>
+                                    <p class="card-text">Birthday: 21/04/2019</p>
+                                </div>
+                            </div>
+
+                            <div class="card-body">
+                                <h4 class="card-title"><a>Tipo: Bulldog Francés</a></h4>
+                                <hr class="my-4">
+                                <p class="lead"><strong>Datos del Contacto</strong></p>
+                                <ul class=".bg-light">
+                                    <li class=".bg-light">Luis Besil<i class=""> </i></li>
+                                    <li class=".bg-light">094 236 444<i class=""></i></li>
+                                    <li class=".bg-light">l.besil@observador.com.uy<i class=""></i></li>
+                                </ul>
+                                <button type="button" class="btn btn-warning">Quitar</button>
+                                <hr class="my-4">
+
+                                <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+                            </div>
+                            <hr class="my-4">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
