--- a/animal.html
+++ b/animal.html
@@ -19,8 +19,7 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -42,7 +41,6 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
             </form>
-
             <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
                 Register
             </button>
@@ -73,13 +71,11 @@
                                     <img class="d-block w-100" src="assets/carr_03.jpg" alt="Third slide">
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
-                                data-slide="prev">
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleControls" role="button"
-                                data-slide="next">
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -87,59 +83,40 @@
                     </div>
                     <div class="col col-12 col-sm-12">
                         <figure class="figure">
-                            <img src="assets/Chewy-pet-food-online-store.gif" class="figure-img img-fluid rounded"
-                                alt="A generic square placeholder image with rounded corners in a figure.">
+                            <img src="assets/Chewy-pet-food-online-store.gif" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                         </figure>
                     </div>
                 </div>
             </div>
 
-
+            <!-- Card -->
             <div class="col col-sm-6">
-                <!-- Card -->
                 <div class="card promoting-card">
-                    <!-- Card content -->
                     <div class="card-body d-flex flex-row">
-                        <!-- Avatar -->
-                        <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px"
-                            alt="avatar">
-                        <!-- Content -->
+                        <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
                         <div>
-                            <!-- Title -->
                             <h4 class="card-title font-weight-bold mb-2">Nombre: Doki</h4>
-                            <!-- Subtitle -->
                             <p class="card-text"><i class="far fa-clock pr-2"></i>Birthday: 21/04/2019</p>
                         </div>
                     </div>
-                    <!-- Card image -->
                     <div class="view overlay">
                         <img class="card-img-top" src="assets/dog_10.jpg" alt="Card image cap">
                         <a href="#!">
                             <div class="mask rgba-white-slight"></div>
                         </a>
                     </div>
-
-                    <!-- Card content -->
                     <div class="card-body p-3 mb-2 bg-light text-dark">
-
-                        <!-- Title -->
                         <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
-                        <!-- Data -->
                         <hr class="my-4">
                         <ul class="">
                             <li class="">Color de pelo</li>
                             <li class="">Color de ojos</li>
-
                         </ul>
-
                         <hr class="my-4">
                         <p class="lead"><strong>Descripción</strong></p>
                         <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
                             <li class="list-inline-item">
-
-                                <p class="text-muted">There are many variations of passages of Lorem Ipsum available,
-                                    but the majority have suffered alteration in some form, by injected humour, or
-                                    randomised words which don't look even slightly believable. </p>
+                                <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                             </li>
                         </ul>
                         <hr class="my-4">
@@ -153,7 +130,6 @@
                         <hr class="my-4">
                         <p class="lead"><strong>Barrio: La Comercial</strong></p>
                         <hr class="my-4">
-                        <!-- Button -->
                         <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
                     </div>
 
