--- a/list.html
+++ b/list.html
@@ -2,14 +2,12 @@
 <html lang="Es">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -17,7 +15,6 @@
     <header>
         <title>Lista</title>
     </header>
-
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
@@ -53,7 +50,6 @@
         <img src="assets/Patitas-01.jpg" class="img-responsive" alt="Logo Patitas" title="Patitas">
     </div>
 
-    <!-- Search list -->
     <main>
         <section>
             <div class="container-fluid">
@@ -111,8 +107,7 @@
                             </div>
                         </form>
                     </div>
-                    <!-- Card -->
-                    <div class="col col-12 col-sm-6 col-md-8">
+                    <div class="col col-12 col-sm-8 col-md-8">
                         <div class="row">
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                                 <div class="card cardLista">
@@ -150,6 +145,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col col-12 col-md-6 col-lg-4">
                                 <div class="card cardLista">
                                     <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
@@ -190,8 +186,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Publicidad -->
-                    <aside class="serchVerticalR col col-12 col-sm-6 col-md-2 col-lg-2">
+                    <aside class="serchVerticalR col col-12 col-sm-4 col-md-2 col-lg-2">
                         <hr />
                         <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg" class="card-img-top" alt="... "></a>
                         <hr />
@@ -200,6 +195,13 @@
                     </aside>
                 </div>
             </div>
+        </section>
+
+        <section>
+            <a class="flotante" href='#'><img src="assets/arrowup.png"></a>
+            <button type="button" class="btn btn-default" aria-label="Left Align">
+                    <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+                  </button>
         </section>
     </main>
     <!-- fin Main -->
@@ -211,6 +213,13 @@
             <span class="second-line">All Rights Reserved.</span>
         </p>
     </footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
