boton up en lista

--- a/list.html
+++ b/list.html
@@ -195,13 +195,13 @@
                     </aside>
                 </div>
             </div>
+
         </section>
 
         <section>
-            <a class="flotante" href='#'><img src="assets/arrowup.png"></a>
-            <button type="button" class="btn btn-default" aria-label="Left Align">
-                    <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
-                  </button>
+            <div>
+                <a class="flotante" href='#'><img src="assets/arrowup.png"></a>
+            </div>
         </section>
     </main>
     <!-- fin Main -->
