--- a/testing.html
+++ b/testing.html
@@ -1,15 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="Es">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -19,8 +17,7 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -78,14 +75,9 @@
                             <ul class="list-unstyled">
                                 <li class="list-inline-item">
 
-                                    <p class="text-muted">There are many variations of passages of Lorem Ipsum
-                                        available,
-                                        but the majority have suffered alteration in some form, by injected humour, or
-                                        randomised words which don't look even slightly believable. Lorem ipsum dolor,
-                                        sit amet consectetur adipisicing elit. Reprehenderit deserunt veniam tempora
-                                        quibusdam blanditiis sequi sapiente voluptates dolorem fuga, repellendus
-                                        corrupti dolore. Nostrum quos soluta explicabo, ea vel veniam optio tempore,
-                                        fuga magnam odio ullam similique rem est? Cupiditate, eos.
+                                    <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. Lorem ipsum
+                                        dolor, sit amet consectetur adipisicing elit. Reprehenderit deserunt veniam tempora quibusdam blanditiis sequi sapiente voluptates dolorem fuga, repellendus corrupti dolore. Nostrum quos soluta explicabo, ea vel
+                                        veniam optio tempore, fuga magnam odio ullam similique rem est? Cupiditate, eos.
                                     </p>
                                 </li>
                             </ul>
@@ -110,38 +102,32 @@
                 <div class="row miniaturas">
                     <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
                         <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
                     </div>
                     <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
                         <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
                     </div>
                     <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
                         <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
                     </div>
                     <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
                         <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
                     </div>
                     <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
                         <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
                     </div>
                     <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
                         <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg"
-                                    class="card-img-top" alt="imagen de mascota">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota">
                             </a>
                         </div>
                     </div>
@@ -182,6 +168,12 @@
             <span class="second-line">All Rights Reserved.</span>
         </p>
     </footer>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
