--- a/animal.html
+++ b/animal.html
@@ -15,6 +15,7 @@
         <title>Mascota</title>
     </header>
 
+
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
@@ -39,6 +40,7 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
             </form>
+
             <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
                 Register
             </button>
@@ -51,90 +53,113 @@
     <hr />
     </div>
 
-    <!-- Ficha - Carrusel -->
     <div class="container">
         <div class="row">
-            <div class="col col-12 col-sm-6">
-                <div class="row">
-                    <div class="col col-sm-12">
-                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img class="d-block w-100" src="assets/carr_01.jpg" alt="First slide">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/carr_02.jpg" alt="Second slide">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/carr_03.jpg" alt="Third slide">
-                                </div>
-                            </div>
-                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="card cardAnimal">
+                    <img class="card-img-top imagen" src="assets/cat-1045782_1920b.jpg" alt="Card image">
+                    <div class="card">
+                        <div>
+
+                            <h4 class="card-title">Nombre: Doki</h4>
+                            <p class="card-text">Birthday: 21/04/2019</p>
                         </div>
-                    </div>
-                    <div class="col col-12 col-sm-12">
-                        <figure class="figure">
-                            <img src="assets/Chewy-pet-food-online-store.gif" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                        </figure>
+                        <div class="card-body">
+                            <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
+                            <hr class="">
+                            <ul class="">
+                                <li class="">Color de pelo</li>
+                                <li class="">Color de ojos</li>
+                            </ul>
+                            <hr class="">
+                            <p class="lead"><strong>Descripción</strong></p>
+                            <ul class="list-unstyled">
+                                <li class="list-inline-item">
+
+                                    <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. Lorem ipsum
+                                        dolor, sit amet consectetur adipisicing elit. Reprehenderit deserunt veniam tempora quibusdam blanditiis sequi sapiente voluptates dolorem fuga, repellendus corrupti dolore. Nostrum quos soluta explicabo, ea vel
+                                        veniam optio tempore, fuga magnam odio ullam similique rem est? Cupiditate, eos.
+                                    </p>
+                                </li>
+                            </ul>
+                            <hr class="">
+                            <p class="lead"><strong>Datos del Contacto</strong></p>
+                            <ul class="">
+                                <li class="">Nombre</li>
+                                <li class="">Telefono</li>
+                                <li class="">Email</li>
+                            </ul>
+                            <button type="button" class="btn btn-info">Contactar</button>
+                            <hr class="my-4">
+                            <p class="lead"><strong>Barrio: La Comercial</strong></p>
+                            <hr class="my-4">
+                            <!-- Button -->
+                            <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <!-- Card -->
-            <div class="col col-sm-6">
-                <div class="card promoting-card">
-                    <div class="card-body d-flex flex-row">
-                        <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
-                        <div>
-                            <h4 class="card-title font-weight-bold mb-2">Nombre: Doki</h4>
-                            <p class="card-text"><i class="far fa-clock pr-2"></i>Birthday: 21/04/2019</p>
+            <div class="col col-sm-12">
+                <div class="row miniaturas">
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
                     </div>
-                    <div class="view overlay">
-                        <img class="card-img-top" src="assets/dog_10.jpg" alt="Card image cap">
-                        <a href="#!">
-                            <div class="mask rgba-white-slight"></div>
-                        </a>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
                     </div>
-                    <div class="card-body p-3 mb-2 bg-light text-dark">
-                        <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
-                        <hr class="my-4">
-                        <ul class="">
-                            <li class="">Color de pelo</li>
-                            <li class="">Color de ojos</li>
-                        </ul>
-                        <hr class="my-4">
-                        <p class="lead"><strong>Descripción</strong></p>
-                        <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
-                            <li class="list-inline-item">
-                                <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                            </li>
-                        </ul>
-                        <hr class="my-4">
-                        <p class="lead"><strong>Datos del Contacto</strong></p>
-                        <ul class=".bg-light">
-                            <li class=".bg-light">Nombre<i class=""> </i></li>
-                            <li class=".bg-light">Telefono<i class=""></i></li>
-                            <li class=".bg-light">Email<i class=""></i></li>
-                        </ul>
-                        <button type="button" class="btn btn-info">Contactar</button>
-                        <hr class="my-4">
-                        <p class="lead"><strong>Barrio: La Comercial</strong></p>
-                        <hr class="my-4">
-                        <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section>
+        <!-- The Modal -->
+        <div class="modal" id="miModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="assets/carr_01.jpg" class="card-img-top" alt="... ">
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+
                     </div>
 
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
     <!--FOOTER-->
@@ -144,7 +169,6 @@
             <span class="second-line">All Rights Reserved.</span>
         </p>
     </footer>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
