--- a/list.html
+++ b/list.html
@@ -39,7 +39,21 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
             </form>
-
+            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+                <li class="nav-item">
+                    <a class="nav-link p-2" href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-2" href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Twitter">2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-2" href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Slack">3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-2" href="https://opencollective.com/bootstrap/" target="_blank" rel="noopener" aria-label="Open Collective">4</a>
+                </li>
+            </ul>
+            <br>
             <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
                 Register
             </button>
