--- a/list.html
+++ b/list.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="datos.js">
 </head>
 
 <body>
@@ -134,7 +135,7 @@
                         <div class="row ">
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4 ">
                                 <div class="card cardLista ">
-                                    <img src="assets/dog_10.jpg " class="card-img-top " alt="... ">
+                                    <img src="assets/dog_10.jpg" class="card-img-top " alt="... ">
                                     <div class="card-body ">
                                         <h5 class="card-title ">Max</h5>
                                         <p class="card-text ">
@@ -146,7 +147,7 @@
                             </div>
                             <div class="col col-12 col-md-6 col-lg-4 ">
                                 <div class="card cardLista ">
-                                    <img src="assets/dog_06.jpg " class="card-img-top " alt="... ">
+                                    <img src="assets/dog_06.jpg" class="card-img-top " alt="... ">
                                     <div class="card-body ">
                                         <h5 class="card-title ">Dante</h5>
                                         <p class="card-text ">
@@ -207,6 +208,19 @@
                                     </div>
                                 </div>
                             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
                         </div>
                     </div>
                     <aside class="serchVerticalR col col-12 col-sm-4 col-md-2 col-lg-2 ">
