--- a/list.html
+++ b/list.html
@@ -89,6 +89,8 @@
                                     <div class="card-body">
                                         <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
 
+                                        <img src="assets/heart.png" class="wish" id="wish" alt="c">
+
                                         <h5 class="card-title">Maxi</h5>
                                         <p class="card-text">
                                             Some quicktitle and make up the bulk of the card's content.
