--- a/list.html
+++ b/list.html
@@ -84,12 +84,12 @@
                     </div>
                     <div class="col col-12 col-sm-8 col-md-8">
                         <div class="row" id="animal-list">
-                            <div class="col col-12 col-md-6 col-lg-4">
+                            <!-- <div class="col col-12 col-md-6 col-lg-4">
                                 <div class="card cardLista">
                                     <div class="card-body">
                                         <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
 
-                                        <img src="assets/heart.png" class="wish" id="wish" alt="c">
+
 
                                         <h5 class="card-title">Maxi</h5>
                                         <p class="card-text">
@@ -98,7 +98,7 @@
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
