--- a/list.html
+++ b/list.html
@@ -36,7 +36,7 @@
                     <a class="trans nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="trans nav-link" href="whishlist.html">Lista de deseos <span class="sr-only"></span></a>
+                    <a class="trans nav-link" href="wishlist.html">Lista de deseos <span class="sr-only"></span></a>
                 </li>
             </ul>
 
