--- a/list.html
+++ b/list.html
@@ -160,7 +160,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 
 </body>
-
+<script src="datos.js"></script>
 <script src="index.js"></script>
+
 
 </html>
