--- a/wishlist.html
+++ b/wishlist.html
@@ -122,6 +122,6 @@
         crossorigin="anonymous"></script>
 
 </body>
-<script src="index.js"></script>
+<script src="datos.js"></script>
 
 </html>
